# Ultimate-Password-Reset-Manager

./: CMakeLists.txt  README.md
buildinfo/: CMakeLists.txt
cmake/: GoTests.cmake  GolangSimple.cmake  PrmBuildInfo.cmake  PrmPackage.cmake  PrmVersion.cmake
install/static/css/: prm.txt
install/static/js/: prm.js
install/static/static/js/: prm.js
install/templates/templates/: error.html  index.html  success.html
prm/: config.yml.template  cracklib.go  cracklib_test.go  crypt_util.go  crypt_util_test.go  email.go  logprm.go  ntlmgen.go  prm.go  prm_test.go
prmserver/: CMakeLists.txt  prm_server.go  prm_server_test.go
static/css/: prm.css
templates/: error.html  index.html  terms.html
